# combine_layers_opencl

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  kernel.cl  opencl_test.c
src/: lib.rs  main.rs
src/shader/: kernel.cl
