[package]
name = "opencl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.4"
rusvid_core = { git = "https://github.com/LetsMelon/rusvid.git", branch = "development", commit = "99187c199461767e56a1df465268026ac6bd2a82" }
